--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <title>And I Quote</title>
   </head>
   <body style="display: flex; align-items: center; justify-content: center; height: 100vh; width: 100vw;">
     <div id="root" style="height: 100%; width: 100%;"></div>
