--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <title>And I Quote</title>
   </head>
-  <body style="display: flex; align-items: center; justify-content: center; height: 100vh; width: 100vw;">
+  <body style="display: flex; align-items: center; justify-content: center; height: 100vh; width: 100vw; font-family: Quicksand;">
     <div id="root" style="height: 100%; width: 100%;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
