--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
     <title>And I Quote</title>
   </head>
-  <body style="display: flex; align-items: center; justify-content: center; height: 100vh; width: 100vw; font-family: Quicksand;">
+  <body style="display: flex; align-items: center; justify-content: center; height: 100vh; width: 100vw; font-family: Quicksand; background-color: #a46ff9">
     <div id="root" style="height: 100%; width: 100%;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
